src/components/NavTabs/style.css
.headbar {
    min-height: 2.7rem;
    color: white;
    background-color: #330000;
    top: 0;
    position: absolute;
    width: 100%;
    margin: 0 auto;
    z-index: 11;
    border-bottom: double 5px orangered;
}

.headbar span {
    font-weight: 900;
    font-size: 1rem;
}

.headbar .small-nav {
    float: left;
}

.headbar #cog {
    float: right;
    margin-right: 15px;
    padding-top: .75rem;
}

.nav {
    list-style: none;
    z-index: 13;
    position: inherit;
    display: inline;
}

.nav>ul {
    float: left;
}

.nav>li {
    
    display: inline;
    padding-right: 6rem;
    margin-right: 12.9rem;
    text-decoration: none;
}

* {
    text-decoration: none;
}

